force-app/main/default/objects/Product2/fields/VBOT_Battery_Capacity_Wh__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Battery_Capacity_Wh__c</fullName>
    <label>Battery Capacity (Wh)</label>
    <description>Nominal battery capacity of this product variant in watt-hours. Used by the spec-diff comparator.</description>
    <inlineHelpText>Nominal battery capacity in Wh.</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>