force-app/main/default/objects/Product2/fields/VBOT_Has_GPS__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Has_GPS__c</fullName>
    <label>Has GPS</label>
    <description>Whether this product variant ships with built-in GPS positioning.</description>
    <inlineHelpText>Spec flag rendered by the spec-diff comparator.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>