force-app/main/default/objects/Product2/fields/VBOT_Has_Lawn_AI__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Has_Lawn_AI__c</fullName>
    <label>Has Lawn AI</label>
    <description>Whether this product variant supports the Lawn AI feature (adaptive mowing patterns).</description>
    <inlineHelpText>Spec flag rendered by the spec-diff comparator.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>