force-app/main/default/objects/Product2/fields/VBOT_Hero_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Hero_Image_Url__c</fullName>
    <label>Hero Image URL</label>
    <description>Public URL for the product hero image rendered in the upgrade recommendation grid.</description>
    <inlineHelpText>Absolute URL to the product hero image (PNG/JPG, ideally 800x500).</inlineHelpText>
    <type>Url</type>
</CustomField>