force-app/main/default/objects/Product2/fields/VBOT_Max_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Max_Area_Sqm__c</fullName>
    <label>Max Area (sqm)</label>
    <description>Maximum lawn area this model can serve. Drives upsell reasoning when a customer property exceeds the current asset's max area.</description>
    <inlineHelpText>Maximum recommended lawn area for this mower model (in m²).</inlineHelpText>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
</CustomField>