force-app/main/default/objects/Product2/fields/VBOT_Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Tier_Label__c</fullName>
    <label>Tier Label</label>
    <description>Short marketing tier label for the product, e.g. Entry, Comfort, Pro. Used by the upgrade recommendation grid.</description>
    <inlineHelpText>Display-only tier label such as "Entry", "Comfort", "Pro", "Accessory", "Software".</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>