force-app/main/default/objects/Product2/listViews/VBOT_Products.listView-meta.xml
<ListView>
    <fullName>VBOT_Products</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VBOT_Tier_Label__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>VBOT Products</label>
</ListView>